overflow fix again

--- a/s.css
+++ b/s.css
@@ -2,11 +2,14 @@ html {
 	margin: 0;
 	padding: 0;
 	font-family: Helvetica, sans-serif;
-	overflow-x: hidden;
 }
 
 body {
-	
+}
+@media screen and (min-width:900px) {
+	body {
+		overflow-x: hidden;
+	}
 }
 
 .logo {
